--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/swagger": "^7.3.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "mongodb": "^6.14.1",
     "oracledb": "^5.5.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -45,7 +46,7 @@
     "@nestjs/testing": "^10.3.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
-    "@types/node": "^16.0.0",
+    "@types/node": "^16.18.126",
     "@types/oracledb": "^5.2.3",
     "@types/passport-jwt": "^3.0.8",
     "@types/supertest": "^2.0.11",
