--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.3",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
@@ -29,6 +30,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/swagger": "^7.3.0",
+    "axios": "^1.7.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "mongodb": "^6.14.1",
@@ -36,6 +38,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -72,6 +75,7 @@
       "json",
       "ts"
     ],
+    "verbose": true,
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
@@ -81,6 +85,30 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "http.service.ts",
+      "index.ts",
+      "main.ts",
+      ".*\\.controller\\.ts$",
+      ".*\\.module\\.ts$",
+      ".*\\.constants\\.ts$",
+      ".*/core/.*$",
+      ".*/newCore/.*$",
+      ".*/dto/.*$",
+      ".*/dtos/.*$",
+      ".*./interface/.*$",
+      ".*./interfaces/.*$",
+      ".*/enum/.*$",
+      ".*/enums/.*$",
+      ".*/sql/.*$",
+      ".*/sqls/.*$",
+      ".*/entity/.*$",
+      ".*/entities/.*ts$"
+    ],
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    }
   }
 }
