--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "axios": "^1.7.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.7",
     "mongodb": "^6.14.1",
     "oracledb": "^5.5.0",
     "passport": "^0.6.0",
@@ -47,6 +48,7 @@
     "@nestjs/cli": "^10.3.0",
     "@nestjs/schematics": "^10.1.0",
     "@nestjs/testing": "^10.3.0",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/node": "^16.18.126",
